--- a/m04/cl11/mercado-liebre/package.json
+++ b/m04/cl11/mercado-liebre/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "mercado-liebre",
+  "name": "html_css",
   "version": "1.0.0",
   "description": "",
   "main": "app.js",
@@ -9,6 +9,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "nodemon": "^2.0.12"
   }
 }
